# SADAS_thesis

./: .gitignore  CMakeLists.txt  log.txt  main.cpp  main_exe  readme.md
.ipynb_checkpoints/: data_check-checkpoint.ipynb
data/AUI/: AUI_CAUSALE_DECODIFICA.csv
data/CTP/: CTP_DECODIFICA_LEGAME.CSV
data/my_datasets/small/: AUI_edges.csv  AUI_edges_test01.csv  AUI_edges_test_blue.csv  AUI_edges_test_cc.csv  AUI_edges_test_orange.csv  AUI_nodes.csv  AUI_nodes_test01.csv  AUI_nodes_test_blue.csv  AUI_nodes_test_cc.csv  AUI_nodes_test_orange.csv  CTP_edges.csv  CTP_edges_test01.csv  CTP_edges_test_blue.csv  CTP_edges_test_orange.csv  CTP_nodes.csv  CTP_nodes_test01.csv  CTP_nodes_test_orange.csv  NEXI_edges.csv  NEXI_edges_test01.csv  NEXI_edges_test_blue.csv  NEXI_edges_test_orange.csv  NEXI_nodes.csv  NEXI_nodes_test01.csv  NEXI_nodes_test_blue.csv  NEXI_nodes_test_orange.csv
src/: data_check.ipynb  data_preparation.sh  plot_scc_freqs.py  scc_sizes.csv
src/.ipynb_checkpoints/: data_check-checkpoint.ipynb
src/C++/: AUI_graph.cpp  AUI_graph.h  CTP_graph.cpp  CTP_graph.h  Makefile  NEXI_graph.cpp  NEXI_graph.h  SADAS_graph.cpp  SADAS_graph.h  prova  prova.cpp  read_utilities.cpp  read_utilities.hpp  test_blue.cpp  test_components  test_components.cpp  test_green  test_green.cpp  test_orange  test_orange.cpp  test_ppr.cpp  utils.h
